test/fails/bad_generics/infer7.lgl
`u app_mat<`t, `u>(`t->`u m, t x) {
    return m * x;
}

void main() {
    vec3 fail = app_mat([[1., 0.], [0., 1.]], [1., 1.]); // Will not return a vec3
}